[project]
name = "pdi-issue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "YogiLiu", email = "YogiLiu@outlook.com" }]
requires-python = ">=3.11"
dependencies = ["dependency-injector==4.46.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
